# tspart

./: .gitignore  .gitmodules  AUTHORS.md  BUILD.sh  CMakeLists.txt  Makefile  README.md  TODO  __selftest_app  build.fox  build_command  requirements.txt  workflow.txt
include/: Block.hh  Config.hh  Constants.hh  HilbertGenerator.hh  ImageLoader.hh  ImageProcessor.hh  Logger.hh  PointsGenerator.hh  PolylineGenerator.hh  TSPBuilder.hh  Visualizer.hh  VoronoiDiagramGenerator.h  VoronoiPointsGenerator.hh
include/FunctionAPI/: API.hh  General.hh  Graph.hh  Image.hh  ImageAPI.hh  Points.hh  PointsAPI.hh
include/Image/: Compositors.hh  Filters.hh  ImageTools.hh  Loader.hh  Maximizer.hh  MultiViewer.hh  Saver.hh  Viewer.hh
include/Points/: Averager.hh  Converters.hh  DataTypes.hh  Generator.hh  Orderers.hh  PloterOutput.hh  PointsTools.hh  Relaxator.hh  Savers.hh  Transformer.hh  Visualizers.hh  VoronoiDelaunay.hh
include/utils/: Block.hh  Config.hh  FindUnion.hh  HilbertGenerator.hh  Logger.hh  UtilityBlocks.hh
misc/: TransparentGrey.txt  convert.py  draw_polyline.py
shaders/: abs_difference.frag  average.frag  blur_x.frag  blur_y.frag  difference.frag  gamma.frag  grayscale.frag  inverse.frag  logarithm.frag  ratio.frag  sigmoid.frag
src/: Block.cc  Config.cc  HilbertGenerator.cc  ImageLoader.cc  ImageProcessor.cc  Logger.cc  PointsGenerator.cc  PolylineGenerator.cc  Visualizer.cc  VoronoiDiagramGenerator.cpp  VoronoiPointsGenerator.cc
src/FunctionAPI/: API.cc  Image.cc  Points.cc
src/Image/: Compositors.cc  Filters.cc  Loader.cc  Maximizer.cc  Saver.cc  Viewer.cc
src/Points/: Averager.cc  Converters.cc  DeintersectorOrderer.cc  Generator.cc  Orderers.cc  PloterOutput.cc  Relaxator.cc  Savers.cc  Transformer.cc  Visualizers.cc  VoronoiDelaunay.cc
src/utils/: Block.cc  Config.cc  HilbertGenerator.cc  Logger.cc  VoronoiDiagramGenerator.cpp  tinyfiledialogs.cpp
tests/: DeintersectorOrderer.cc
tools/: block_test.cc  build_tsp_art.cc  cfgtest.cc  color_normalization.cc  colorful_tesselation.cc  graph_test.cc  grayscale_normalization.cc  main.cc  mid_pass.cc  normalization.cc  tesselation_cli.cc  tesselation_gui.cc  tsp_art.cc  tspart_cli.cc  tspart_gui.cc  voronoi_test.cc
tools/twitterbot_apps/: hilbert_path.cc  mid_color.cc  mid_grayscale.cc  voronoi.cc  voronoi_lowres.cc
